<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="sqrt">√</string>
    <string name="pi">π</string>
    <string name="fac">!</string>
    <string name="power">^</string>
    <string name="ac">AC</string>
    <string name="brackets">()</string>
    <string name="mod">%</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">&#0045;</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="del">\u232b</string>
    <string name="enter">=</string>
</resources>