<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:columnCount="4"
    android:paddingTop="10dp"
    android:paddingBottom="5dp"
    android:background="#F8F8F8"
    android:rowCount="6">

    <Button
        android:id="@+id/btnSqrt"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/sqrt"
        android:onClick="onOperator"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnPi"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/pi"
        android:onClick="onOperator"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnPower"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/power"
        android:onClick="onOperator"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnFactorial"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/fac"
        android:onClick="onOperator"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnAC"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="#3F51B5"
        android:text="@string/ac"
        android:textColor="@color/white"
        android:layout_height="80dp"
        android:onClick="onClearAll"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnBrackets"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/brackets"
        android:textColor="@color/black"
        android:onClick="onBrackets"
        android:layout_height="80dp"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnMod"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/mod"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onOperator"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/divide"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onOperator"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn7"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_7"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn8"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn9"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml"/>

    <Button
        android:id="@+id/btnMultiply"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/x"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:onClick="onOperator"
        android:layout_height="80dp"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn4"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_4"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn5"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn6"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onOperator"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn1"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn2"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn3"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/add"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onOperator"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn0"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDigit"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnDot"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/white"
        android:text="@string/dot"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:onClick="onDotPress"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnDel"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="#F06292"
        android:textColor="@color/black"
        android:text="@string/del"
        android:onClick="onBackSpace"
        android:layout_height="80dp"
        android:textSize="@dimen/text_button_medium"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/button_margin_small"
        android:layout_marginEnd="@dimen/button_margin_small"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        android:text="@string/enter"
        android:textStyle="bold"
        android:layout_height="80dp"
        android:onClick="onResult"
        android:textSize="24sp"
        tools:ignore="UsingOnClickInXml" />

</GridLayout>